# SimpleGraph

./: CMakeLists.txt  CMakePresets.json  LICENSE  READE.MD  README  README.md  main.cpp
src/: stcmIncludes.cpp  stcmIncludes.h
